# jbreidfjord.tech

./: .firebaserc  .gitignore  README.md  craco.config.js  package-lock.json  package.json
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
game-of-life-rs/: Cargo.toml
game-of-life-rs/src/: gradient.rs  lib.rs  utils.rs
public/: index.html  manifest.json
src/: App.js  index.css  portfolio.json
src/components/: Canvas.css  Canvas.js  Portfolio.css  Portfolio.js  Project.css  Project.js  gradient.js
src/pages/: Home.css  Home.js
